rights holder is now indexed